# aegis-client

./: .env.example  .gitignore  README.md  README.md.rej  pyproject.toml
.aegis/: handoff.md  session.jsonl
aegis/: __init__.py  auto.py  client.py  client.py.orig  client.py.rej  config.py  exceptions.py  plan.py  result.py  types.py
aegis/adapters/: huggingface.py  langchain.py  langgraph.py
aegis/shell/: __init__.py  attach.py  auto.py  cli.py  config.py  control.py  observe.py  prompts.py  render.py  session.py
docs/: aegis-shell.md  architecture.md  demo-proofs.md  index.md  integration-patterns.md  legacy-and-migration.md  quickstart.md  request-shapes.md  result-model.md  roadmap.md  scopes.md  sdk-overview.md  troubleshoot.md
docs/examples/: agent_workflow.md  openai_llm.md  rag_pipeline.md
examples/: agent_control.py  before_after_demo.py  context_control.py  huggingface_basic.py  langchain_basic.py  langgraph_basic.py  llm_basic.py  multi_agent_drift_demo.py  openai_basic.py  rag_basic.py  runtime_gateway_demo.py  step_basic.py
examples/shell_attach/: README.md  context_bloat_pipeline.py  noisy_rag_pipeline.py  retry_loop_pipeline.py
tests/: test_client.py  test_shell_attach.py  test_shell_auto.py  test_shell_auto_manage.py  test_shell_auto_runtime.py  test_shell_cli.py  test_shell_config.py  test_shell_control.py  test_shell_observe.py
