[project]
name = "scelabs-aegis"
version = "0.6.0"
description = "Runtime control layer for stabilizing AI systems and improving behavior without retraining"
authors = [
{ name = "SCELabs" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
"httpx>=0.27.0",
"requests>=2.31.0",
]
license = "MIT"
keywords = [
"ai",
"llm",
"agents",
"runtime",
"stability",
"reliability",
"control",
"automation",
"aegis",
]
classifiers = [
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3 :: Only",
"Operating System :: OS Independent",
]

[project.scripts]
aegis = "aegis.shell.cli:main"

[tool.setuptools.packages.find]
include = ["aegis*"]
exclude = ["assets*", "docs*", "examples*", "tests*"]
